--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
@@ -39,10 +39,10 @@
     </Grid>
 
     <Page.BottomAppBar>
-        <CommandBar>
+        <CommandBar x:Name="PageCommandBar">
             <CommandBar.PrimaryCommands>
                 <AppBarButton x:Name="ArmButton" Icon="Favorite" Click="OnArm" HorizontalAlignment="Left" Label="Arm"/>
-                <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
+                <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay" Label="Play"/>
                 <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause" Visibility="Collapsed"/>
                 <AppBarButton x:Name="SettingsButton" Icon="Setting" Click="OnSettings" Label="Settings"/>
                 <AppBarButton x:Name="HelpButton" Icon="Help" Click="OnHelp" Label="Help"/>
