--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
@@ -16,8 +16,7 @@
     <Grid Background="{Binding Path=Connected, Converter={StaticResource FalseBackgroundConverter}, ConverterParameter=#80805050}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Grid.Row="0" Foreground="Gray" FontSize="12"/>
         <GridView x:Name="TubeGrid" ItemsSource="{Binding Tubes}" Margin="10,5" Padding="0" Grid.Row="1" ScrollViewer.HorizontalScrollMode="Disabled" 
@@ -35,6 +34,6 @@
                 </ItemsPanelTemplate>
             </GridView.ItemsPanel>
         </GridView>
-        <TextBlock Margin="2" Foreground="Salmon" Text="{Binding ErrorMessage}" Grid.Row="2" FontSize="12" TextWrapping="Wrap"/>
+        <TextBlock Margin="2" Foreground="Salmon" Text="{Binding ErrorMessage}" Grid.Row="1" FontSize="12" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </UserControl>
