--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/SettingsPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/SettingsPage.xaml
@@ -51,6 +51,7 @@
                 </ComboBox>
                 <TextBox x:Name="ArmColor" Header="Arm actual color" Text="{Binding ArmColor, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
 
+                <TextBox x:Name="BurnTime" Header="Burn time (milliseconds)" Text="{Binding BurnTime, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
             </StackPanel>
 
 
